# confoo2026

./: .gitignore  README.md  pyproject.toml
src/confoo/: __main__.py  app.py  calendar_manager.py  data_loader.py  day_utils.py  db.py  export.py  models.py  scraper.py
src/confoo/screens/: my_calendar.py  schedule.py  session_detail.py  sync.py
src/confoo/styles/: app.tcss
