[project]
name = "confoo2026"
version = "0.1.0"
description = "ConFoo 2026 TUI Schedule Planner"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "playwright>=1.40.0",
    "icalendar>=6.0.0",
]

[project.scripts]
confoo = "confoo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confoo"]
